gl51-master/src/test/deca/context/invalid/test_rule3_37.deca
// Description
// PLUS uniquement entre des nombres

{
    int a = 2;
    boolean b = true;
    b = a + b;//error
    //PASSED
}